[gd_scene load_steps=8 format=3 uid="uid://ba8i3uorqfbvh"]

[ext_resource type="Script" path="res://script/main_game.gd" id="1_sac5s"]
[ext_resource type="PackedScene" uid="uid://cdvv0nnyur4cq" path="res://assets/circle.tscn" id="2_sbclt"]
[ext_resource type="PackedScene" uid="uid://4fuge5ugc3hw" path="res://assets/cross.tscn" id="3_qntsn"]
[ext_resource type="PackedScene" uid="uid://dc0gnmn4g0887" path="res://assets/board.tscn" id="4_575x3"]
[ext_resource type="PackedScene" uid="uid://c88n3iythvkec" path="res://scene/game_over_menu.tscn" id="5_dl0r1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3bq6"]
bg_color = Color(0, 0.67451, 0.803922, 1)
border_width_left = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3e7b4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(5, 5)

[node name="MainGame" type="Node"]
script = ExtResource("1_sac5s")
circle_sence = ExtResource("2_sbclt")
cross_sence = ExtResource("3_qntsn")

[node name="Board" parent="." instance=ExtResource("4_575x3")]
position = Vector2(300, 300)

[node name="SidePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 600)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3bq6")

[node name="PlayerLabel" type="Label" parent="."]
offset_left = 600.0
offset_top = 120.0
offset_right = 900.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 46
text = "Next Player:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerPanel" type="Panel" parent="."]
offset_left = 650.0
offset_top = 200.0
offset_right = 850.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3e7b4")

[node name="GameOverMenu" parent="." instance=ExtResource("5_dl0r1")]
process_mode = 2

[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
